Fix bug subscribe