@@ -199,10 +199,10 @@ public class GeocellManager {
 				break;
 			}
 		}
-		logger.log(Level.INFO, "Calculate cells "
-				+ StringUtils.join(minCostCellSet, ", ") + " in box ("
-				+ bbox.getSouth() + "," + bbox.getWest() + ") ("
-				+ bbox.getNorth() + "," + bbox.getEast() + ")");
+		logger.log(Level.INFO,
+				"Calculate cells " + StringUtils.join(minCostCellSet, ", ")
+						+ " in box (" + bbox.getSouth() + "," + bbox.getWest()
+						+ ") (" + bbox.getNorth() + "," + bbox.getEast() + ")");
 		return minCostCellSet;
 	}
 
@@ -325,16 +325,18 @@ public class GeocellManager {
 					|| baseQuery.getParameters().isEmpty()) {
 				newResultEntities = (List<T>) query.execute(curGeocellsUnique);
 			} else {
-				List<Object> parameters = new ArrayList<Object>(baseQuery
-						.getParameters());
+				List<Object> parameters = new ArrayList<Object>(
+						baseQuery.getParameters());
 
 				parameters.add(curGeocellsUnique);
 				newResultEntities = (List<T>) query.executeWithArray(parameters
 						.toArray());
 			}
 
-			logger.log(Level.FINE, "fetch complete for: "
-					+ StringUtils.join(curGeocellsUnique, ", "));
+			logger.log(
+					Level.FINE,
+					"fetch complete for: "
+							+ StringUtils.join(curGeocellsUnique, ", "));
 
 			searchedCells.addAll(curGeocells);
 
@@ -348,8 +350,8 @@ public class GeocellManager {
 			// TODO (Alex) we can optimize here. Sort is needed only if
 			// new_results.size() > max_results.
 			Collections.sort(newResults);
-			newResults = newResults.subList(0, Math.min(maxResults, newResults
-					.size()));
+			newResults = newResults.subList(0,
+					Math.min(maxResults, newResults.size()));
 
 			// Merge new_results into results
 			for (LocationComparableTuple<T> tuple : newResults) {
@@ -372,8 +374,8 @@ public class GeocellManager {
 				 * adjacent geocells, in which case we should now search the
 				 * parents of those geocells.
 				 */
-				curContainingGeocell = curContainingGeocell.substring(0, Math
-						.max(curContainingGeocell.length() - 1, 0));
+				curContainingGeocell = curContainingGeocell.substring(0,
+						Math.max(curContainingGeocell.length() - 1, 0));
 				if (curContainingGeocell.length() == 0) {
 					break; // Done with search, we've searched everywhere.
 				}
@@ -399,9 +401,10 @@ public class GeocellManager {
 						nearestEdge));
 			} else if (curGeocells.size() == 2) {
 				// Get adjacents in perpendicular direction.
-				int nearestEdge[] = GeocellUtils.distanceSortedEdges(
-						Arrays.asList(curContainingGeocell), center).get(0)
-						.getFirst();
+				int nearestEdge[] = GeocellUtils
+						.distanceSortedEdges(
+								Arrays.asList(curContainingGeocell), center)
+						.get(0).getFirst();
 				int[] perpendicularNearestEdge = { 0, 0 };
 				if (nearestEdge[0] == 0) {
 					// Was vertical, perpendicular is horizontal.
@@ -457,15 +460,15 @@ public class GeocellManager {
 		}// end while
 
 		List<T> result = new ArrayList<T>();
-		for (Tuple<T, Double> entry : results.subList(0, Math.min(maxResults,
-				results.size()))) {
+		for (Tuple<T, Double> entry : results.subList(0,
+				Math.min(maxResults, results.size()))) {
 			if (maxDistance == 0 || entry.getSecond() < maxDistance) {
 				result.add(entry.getFirst());
 			}
 		}
-		logger.log(Level.INFO, "Proximity query looked in "
-				+ searchedCells.size() + " geocells and found " + result.size()
-				+ " results.");
+		logger.log(Level.INFO,
+				"Proximity query looked in " + searchedCells.size()
+						+ " geocells and found " + result.size() + " results.");
 		return result;
 	}
 
@@ -536,13 +539,16 @@ public class GeocellManager {
 				query.declareParameters(baseQuery.getDeclaredParameters()
 						+ ", String geocellsP");
 			}
-			
-			if (baseQuery.getDecleredImports()!=null && baseQuery.getDecleredImports().trim().length()>0){
+
+			if (baseQuery.getDecleredImports() != null
+					&& baseQuery.getDecleredImports().trim().length() > 0) {
 				query.declareImports(baseQuery.getDecleredImports());
 			}
-			
-			if (baseQuery.getToRecord()>0 && baseQuery.getToRecord()>baseQuery.getFromRecord()){
-				query.setRange(baseQuery.getFromRecord(), baseQuery.getToRecord());
+
+			if (baseQuery.getToRecord() > 0
+					&& baseQuery.getToRecord() > baseQuery.getFromRecord()) {
+				query.setRange(baseQuery.getFromRecord(),
+						baseQuery.getToRecord());
 			}
 
 			List<T> newResultEntities;
@@ -555,12 +561,14 @@ public class GeocellManager {
 				// newResultEntities = (List<T>)
 				// query.executeWithArray(parameters
 				// .toArray());
-				newResultEntities = (List<T>) query.execute(baseQuery
-						.getParameters(), curGeocells);
+				newResultEntities = (List<T>) query.execute(
+						baseQuery.getParameters(), curGeocells);
 			}
 
-			logger.log(Level.FINE, "fetch complete for: "
-					+ StringUtils.join(curGeocellsUnique, ", "));
+			logger.log(
+					Level.FINE,
+					"fetch complete for: "
+							+ StringUtils.join(curGeocellsUnique, ", "));
 
 			searchedCells.addAll(curGeocells);
 
@@ -574,8 +582,8 @@ public class GeocellManager {
 			// TODO (Alex) we can optimize here. Sort is needed only if
 			// new_results.size() > max_results.
 			Collections.sort(newResults);
-			newResults = newResults.subList(0, Math.min(maxResults, newResults
-					.size()));
+			newResults = newResults.subList(0,
+					Math.min(maxResults, newResults.size()));
 
 			// Merge new_results into results
 			for (LocationComparableTuple<T> tuple : newResults) {
@@ -598,8 +606,8 @@ public class GeocellManager {
 				 * adjacent geocells, in which case we should now search the
 				 * parents of those geocells.
 				 */
-				curContainingGeocell = curContainingGeocell.substring(0, Math
-						.max(curContainingGeocell.length() - 1, 0));
+				curContainingGeocell = curContainingGeocell.substring(0,
+						Math.max(curContainingGeocell.length() - 1, 0));
 				if (curContainingGeocell.length() == 0) {
 					break; // Done with search, we've searched everywhere.
 				}
@@ -625,9 +633,10 @@ public class GeocellManager {
 						nearestEdge));
 			} else if (curGeocells.size() == 2) {
 				// Get adjacents in perpendicular direction.
-				int nearestEdge[] = GeocellUtils.distanceSortedEdges(
-						Arrays.asList(curContainingGeocell), center).get(0)
-						.getFirst();
+				int nearestEdge[] = GeocellUtils
+						.distanceSortedEdges(
+								Arrays.asList(curContainingGeocell), center)
+						.get(0).getFirst();
 				int[] perpendicularNearestEdge = { 0, 0 };
 				if (nearestEdge[0] == 0) {
 					// Was vertical, perpendicular is horizontal.
@@ -684,15 +693,15 @@ public class GeocellManager {
 			}
 		}
 		List<T> result = new ArrayList<T>();
-		for (Tuple<T, Double> entry : results.subList(0, Math.min(maxResults,
-				results.size()))) {
+		for (Tuple<T, Double> entry : results.subList(0,
+				Math.min(maxResults, results.size()))) {
 			if (maxDistance == 0 || entry.getSecond() < maxDistance) {
 				result.add(entry.getFirst());
 			}
 		}
-		logger.log(Level.INFO, "Proximity query looked in "
-				+ searchedCells.size() + " geocells and found " + result.size()
-				+ " results.");
+		logger.log(Level.INFO,
+				"Proximity query looked in " + searchedCells.size()
+						+ " geocells and found " + result.size() + " results.");
 		return result;
 	}
 
@@ -735,6 +744,254 @@ public class GeocellManager {
 				declareParametersBuffer.toString(), parametersForSearch);
 		return proximityFetch(center, maxResults, maxDistance, entityClass,
 				baseQuery, pm, maxGeocellResolution);
+	}
+
+	@SuppressWarnings("unchecked")
+	public static final <T extends LocationCapable> List<T> proximityFetchNewN(
+			Point center, int maxResults, double maxDistance,
+			Class<T> entityClass, GeocellQuery baseQuery,
+			PersistenceManager pm, int maxGeocellResolution) {
+		List<LocationComparableTuple<T>> results = new ArrayList<LocationComparableTuple<T>>();
+
+		ArrayList parameters = new ArrayList();
+
+		Validate.isTrue(maxGeocellResolution <= MAX_GEOCELL_RESOLUTION,
+				"Invalid max resolution parameter. Must be inferior to ",
+				MAX_GEOCELL_RESOLUTION);
+
+		// The current search geocell containing the lat,lon.
+		String curContainingGeocell = GeocellUtils.compute(center,
+				maxGeocellResolution);
+
+		// Set of already searched cells
+		Set<String> searchedCells = new HashSet<String>();
+
+		/*
+		 * The currently-being-searched geocells. NOTES: Start with max
+		 * possible. Must always be of the same resolution. Must always form a
+		 * rectangular region. One of these must be equal to the
+		 * cur_containing_geocell.
+		 */
+		List<String> curGeocells = new ArrayList<String>();
+		curGeocells.add(curContainingGeocell);
+		double closestPossibleNextResultDist = 0;
+
+		/*
+		 * Assumes both a and b are lists of (entity, dist) tuples, *sorted by
+		 * dist*. NOTE: This is an in-place merge, and there are guaranteed no
+		 * duplicates in the resulting list.
+		 */
+
+		int noDirection[] = { 0, 0 };
+		List<Tuple<int[], Double>> sortedEdgesDistances = Arrays
+				.asList(new Tuple<int[], Double>(noDirection, 0d));
+
+		while (!curGeocells.isEmpty()) {
+			closestPossibleNextResultDist = sortedEdgesDistances.get(0)
+					.getSecond();
+			if (maxDistance > 0 && closestPossibleNextResultDist > maxDistance) {
+				break;
+			}
+
+			Set<String> curTempUnique = new HashSet<String>(curGeocells);
+			curTempUnique.removeAll(searchedCells);
+			List<String> curGeocellsUnique = new ArrayList<String>(
+					curTempUnique);
+
+			// Run query on the next set of geocells.
+			// String and =
+			// baseQuery.getBaseQuery().toUpperCase().contains("WHERE") ? " && "
+			// : " ";
+			String and = baseQuery.getBaseQuery() != null
+					&& baseQuery.getBaseQuery().trim().length() != 0 ? " && "
+					: " ";
+			// Query query = pm.newQuery(entityClass, baseQuery.getBaseQuery()
+			// + and + "geocellsP.contains(geocells)");
+			Query query = null;
+			StringBuffer declareParametersBuffer = new StringBuffer();
+			StringBuffer queryBuffer = new StringBuffer();
+			int curGCSize = curGeocells.size();
+			for (int i = 0; i < curGCSize; i++) {
+				queryBuffer.append("geocells.contains(grocellsP" + i + ")");
+				declareParametersBuffer.append("String grocellsP" + i);
+				if (i != curGCSize - 1) {
+					queryBuffer.append(" &&");
+					declareParametersBuffer.append(", ");
+				}
+			}
+			query = pm.newQuery(entityClass, baseQuery.getBaseQuery() + and
+					+ queryBuffer.toString());
+
+			if (baseQuery.getDeclaredParameters() == null
+					|| baseQuery.getDeclaredParameters().trim().length() == 0) {
+				query.declareParameters(declareParametersBuffer.toString());
+			} else {
+				query.declareParameters(baseQuery.getDeclaredParameters()
+						+ ", " + declareParametersBuffer.toString());
+			}
+
+			if (baseQuery.getDecleredImports() != null
+					&& baseQuery.getDecleredImports().trim().length() > 0) {
+				query.declareImports(baseQuery.getDecleredImports());
+			}
+
+			if (baseQuery.getToRecord() > 0
+					&& baseQuery.getToRecord() > baseQuery.getFromRecord()) {
+				query.setRange(baseQuery.getFromRecord(),
+						baseQuery.getToRecord());
+			}
+
+			List<T> newResultEntities;
+			if (baseQuery.getParameters() == null
+					|| baseQuery.getParameters().isEmpty()) {
+				newResultEntities = (List<T>) query
+						.executeWithArray(curGeocellsUnique.toArray());
+			} else {
+				parameters.clear();
+				parameters.addAll(baseQuery.getParameters());
+				parameters.addAll(curGeocells);
+				newResultEntities = (List<T>) query.executeWithArray(parameters
+						.toArray());
+			}
+
+			logger.log(
+					Level.FINE,
+					"fetch complete for: "
+							+ StringUtils.join(curGeocellsUnique, ", "));
+
+			searchedCells.addAll(curGeocells);
+
+			// Begin storing distance from the search result entity to the
+			// search center along with the search result itself, in a tuple.
+			List<LocationComparableTuple<T>> newResults = new ArrayList<LocationComparableTuple<T>>();
+			for (T entity : newResultEntities) {
+				newResults.add(new LocationComparableTuple<T>(entity,
+						GeocellUtils.distance(center, entity.getLocation())));
+			}
+			// TODO (Alex) we can optimize here. Sort is needed only if
+			// new_results.size() > max_results.
+			Collections.sort(newResults);
+			newResults = newResults.subList(0,
+					Math.min(maxResults, newResults.size()));
+
+			// Merge new_results into results
+			for (LocationComparableTuple<T> tuple : newResults) {
+				// contains method will check if entity in tuple have same key
+				if (!results.contains(tuple)) {
+					results.add(tuple);
+				}
+			}
+
+			Collections.sort(results);
+			results = results.subList(0, Math.min(maxResults, results.size()));
+
+			sortedEdgesDistances = GeocellUtils.distanceSortedEdges(
+					curGeocells, center);
+
+			if (results.size() == 0 || curGeocells.size() == 4) {
+				/*
+				 * Either no results (in which case we optimize by not looking
+				 * at adjacents, go straight to the parent) or we've searched 4
+				 * adjacent geocells, in which case we should now search the
+				 * parents of those geocells.
+				 */
+				curContainingGeocell = curContainingGeocell.substring(0,
+						Math.max(curContainingGeocell.length() - 1, 0));
+				if (curContainingGeocell.length() == 0) {
+					break; // Done with search, we've searched everywhere.
+				}
+				List<String> oldCurGeocells = new ArrayList<String>(curGeocells);
+				curGeocells.clear();
+				for (String cell : oldCurGeocells) {
+					if (cell.length() > 0) {
+						String newCell = cell.substring(0, cell.length() - 1);
+						if (!curGeocells.contains(newCell)) {
+							curGeocells.add(newCell);
+						}
+					}
+				}
+				if (curGeocells.size() == 0) {
+					break; // Done with search, we've searched everywhere.
+				}
+			} else if (curGeocells.size() == 1) {
+				// Get adjacent in one direction.
+				// TODO(romannurik): Watch for +/- 90 degree latitude edge case
+				// geocells.
+				int nearestEdge[] = sortedEdgesDistances.get(0).getFirst();
+				curGeocells.add(GeocellUtils.adjacent(curGeocells.get(0),
+						nearestEdge));
+			} else if (curGeocells.size() == 2) {
+				// Get adjacents in perpendicular direction.
+				int nearestEdge[] = GeocellUtils
+						.distanceSortedEdges(
+								Arrays.asList(curContainingGeocell), center)
+						.get(0).getFirst();
+				int[] perpendicularNearestEdge = { 0, 0 };
+				if (nearestEdge[0] == 0) {
+					// Was vertical, perpendicular is horizontal.
+					for (Tuple<int[], Double> edgeDistance : sortedEdgesDistances) {
+						if (edgeDistance.getFirst()[0] != 0) {
+							perpendicularNearestEdge = edgeDistance.getFirst();
+							break;
+						}
+					}
+				} else {
+					// Was horizontal, perpendicular is vertical.
+					for (Tuple<int[], Double> edgeDistance : sortedEdgesDistances) {
+						if (edgeDistance.getFirst()[0] == 0) {
+							perpendicularNearestEdge = edgeDistance.getFirst();
+							break;
+						}
+					}
+				}
+				List<String> tempCells = new ArrayList<String>();
+				for (String cell : curGeocells) {
+					tempCells.add(GeocellUtils.adjacent(cell,
+							perpendicularNearestEdge));
+				}
+				curGeocells.addAll(tempCells);
+			}
+
+			// We don't have enough items yet, keep searching.
+			if (results.size() < maxResults) {
+				logger.log(Level.FINE, results.size()
+						+ " results found but want " + maxResults
+						+ " results, continuing search.");
+				continue;
+			}
+
+			logger.log(Level.FINE, results.size() + " results found.");
+
+			// If the currently max_results'th closest item is closer than any
+			// of the next test geocells, we're done searching.
+			if (maxResults > 0) {
+				double currentFarthestReturnableResultDist = GeocellUtils
+						.distance(center, results.get(maxResults - 1)
+								.getFirst().getLocation());
+				if (closestPossibleNextResultDist >= currentFarthestReturnableResultDist) {
+					logger.log(Level.FINE, "DONE next result at least "
+							+ closestPossibleNextResultDist
+							+ " away, current farthest is "
+							+ currentFarthestReturnableResultDist + " dist");
+					break;
+				}
+				logger.log(Level.FINE, "next result at least "
+						+ closestPossibleNextResultDist
+						+ " away, current farthest is "
+						+ currentFarthestReturnableResultDist + " dist");
+			}
+		}
+		List<T> result = new ArrayList<T>();
+		for (Tuple<T, Double> entry : results.subList(0,
+				Math.min(maxResults, results.size()))) {
+			if (maxDistance == 0 || entry.getSecond() < maxDistance) {
+				result.add(entry.getFirst());
+			}
+		}
+		logger.log(Level.INFO,
+				"Proximity query looked in " + searchedCells.size()
+						+ " geocells and found " + result.size() + " results.");
+		return result;
 	}
 
 	/**
